--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.483.0",
+    "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-aos": "^1.0.1",
     "react-bootstrap": "^2.10.9",
