--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@popperjs/core": "^2.11.8",
+    "animejs": "^3.2.2",
     "aos": "^2.3.4",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
     "framer-motion": "^12.6.2",
-    "lucide-react": "^0.483.0",
+    "gsap": "^3.12.7",
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-aos": "^1.0.1",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
-    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
-    "swiper": "^11.2.6"
+    "react-typed": "^2.0.12",
+    "swiper": "^11.2.6",
+    "typed-js": "^0.2.3",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
