--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "d3": "^7.9.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.483.0",
     "motion": "^12.6.2",
@@ -21,9 +22,15 @@
     "react-aos": "^1.0.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.4.0",
-    "swiper": "^11.2.6"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.6",
+    "topojson": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -36,7 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
   }
 }
