--- a/package.json
+++ b/package.json
@@ -18,19 +18,25 @@
     "animejs": "^3.2.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.5",
+    "d3": "^7.9.0",
     "fontawesome": "^5.6.3",
     "framer-motion": "^12.6.2",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.503.0",
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-aos": "^1.0.1",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
+    "react-slick": "^0.30.3",
     "react-typed": "^2.0.12",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
     "typed-js": "^0.2.3",
     "typed.js": "^2.1.0"
